# CppSandbox

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/benchmarks/: count_to_million.hpp  eigen_ops.hpp
src/utils/: timer.hpp
